# SpialFastLoop

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
SpiralFastLoop/: .flake8  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  LICENSE  NOTICE  README.md  SECURITY.md  TRADEMARKS.md  auto_epsilon.py  pyproject.toml  pyproject.toml.bak
SpiralFastLoop/docs/: architecture_review_playbook.md  decimal_migration_plan.md  operations_metrics.md
SpiralFastLoop/examples/: bench_synth.py  sr_generate_demo.py  train_resnet.py
SpiralFastLoop/scripts/: bench.py  bench_parallel_transactions.py  collect_metrics.py
SpiralFastLoop/spiralfastloop/: __init__.py  auto_epsilon.py  engine.py  metrics.py  numerics.py  utils.py
SpiralFastLoop/spiralfastloop.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
SpiralFastLoop/spiralfastloop/extras/: surprisal_sandwich.py  trigger_mix.py
SpiralFastLoop/tests/: conftest.py  test_auto_epsilon.py  test_engine_properties.py  test_metrics_normalization.py  test_numerics_accumulator.py  test_trigger_mix.py  test_trigger_mix_properties.py  test_utils_throughput.py
SpiralFastLoop/tests/fixtures/: __init__.py
