[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spiralfastloop"
version = "0.1.1"
description = "Fast, pragmatic training loop template for PyTorch (CUDA/MPS/CPU) with Surprisal Sandwich decoding extras."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "RyÅ" }]
dependencies = ["torch>=2.1"]
keywords = ["pytorch", "training", "cuda", "mps", "acceleration", "llm", "transformers"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.optional-dependencies]
extras = ["transformers>=4.40"]
dev = [
  "pytest>=8.0",
  "mypy>=1.9",
  "flake8>=7.0",
]

[project.urls]
Homepage = "https://github.com/your-user/SpiralFastLoop"
Repository = "https://github.com/your-user/SpiralFastLoop"

[tool.mypy]
python_version = "3.9"
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
strict_equality = true
allow_redefinition = false

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["transformers", "transformers.*"]
ignore_missing_imports = true

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "E302", "E305", "E402", "E501", "W503"]
